...
        Email
    </string>
    <string name="prompt_password">
        Password
    </string>
    <string name="action_sign_in_short">
        Sign in
    </string>
    <string name="action_register">
        Register with the above details
    </string>
    <string name="logo_description">
        The Coinz logo.
...
        Hello and welcome to the bank!
    </string>
    <string name="bank_logo_description">
        The bank logo.
    </string>
    <string name="deposit_button_text">
        Deposit
    </string>
    <string name="coin_location_prompt">
        Where do you want to deposit coins from?
    </string>
    <string name="inbox_choice_button_text">
        My Inbox
    </string>
    <string name="wallet_choice_button_text">
        My Wallet
    </string>

    <!-- Strings related to displaying Coins in a ListView -->
    <string name="coinListItemText">
        %s: %.2f
    </string>
...
