<?xml version="1.0" encoding="utf-8"?>

<!-- Define the layout for an item in a multiple-choice list (with a check mark). -->
<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/checkedListItemText"
    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textAppearance="?android:attr/textAppearanceListItem"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
...
